<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ERApp</string>
    <string name="menu_title">My Expenses</string>
    <string name="log_out">Log Out</string>
    <string name="action_new">Add an Expense</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello, welcome to ERApp!</string>
    <string name="purchase_date">Purchase Date: 11/12/13</string>
    <string name="TODO">TODO</string>
    <string name="home_depot">Home Depot</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="Login">Login:</string>
    <string name="attempts">Attempts Left:</string>
    <string name="History">View expense history</string>
    <string name="addItem">Add an Expense</string>
    <string name="Account">View account settings</string>
    <string name="Register_Title">Please enter your requested Username and Password!</string>
    <string name="add_new_expense">Add New Expense</string>
    <string name="title_activity_dispatch">DispatchActivity</string>
    <string name="expense_title">%1$s : </string>
    <string name="vendor">Vendor:</string>
    <string name="amount">Amount:</string>
    <string name="purchaseDate">Date:</string>
    <string name="notes">Notes:</string>
    <string name="title_view_expense_activity">Expense</string>
    <string name="status">Status:</string>
    
    
    
    
    
        <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="edit">Edit this expense</string>
    
    
    

</resources>
