<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/UserNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/Register_Title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/PasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/UserNameLabel"
        android:layout_marginTop="50dp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/enterUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/PasswordLabel"
        android:layout_marginLeft="32dp"
        android:layout_toRightOf="@+id/PasswordLabel"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/enterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/PasswordLabel"
        android:layout_below="@+id/PasswordLabel"
        android:text="@string/password"
        android:layout_marginTop="38dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/enterPassword"
        android:layout_alignLeft="@+id/enterUsername"
        android:ems="10" />
    
    <TextView
        android:id="@+id/enter_password_again"
        android:text="P/W Again:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enterPassword"
        android:layout_marginTop="38dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enterPassword"
        android:layout_below="@+id/enter_password_again"
        android:layout_marginTop="51dp"
        android:layout_toLeftOf="@+id/editText2"
        android:onClick="register"
        android:text="Register!" />

    <EditText
        android:id="@+id/password_again_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/enter_password_again"
        android:layout_alignBottom="@+id/enter_password_again"
        android:layout_toRightOf="@+id/registerButton"
        android:ems="10" />

</RelativeLayout>